--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "pydantic (>=2.11.4,<3.0.0)",
+    "jinja2 (>=3.1.6,<4.0.0)"
 ]
 
 
